project restructuring, README updates and cleanup